syntax = "proto3";

import "org/kiyotoko/pong/net/game_object.proto";
import "org/kiyotoko/pong/net/player.proto";

option optimize_for = SPEED;
option java_multiple_files = true;
option java_package = "org.kiyotoko.pong.net";

service Pong {
  rpc Join (JoinRequest) returns (JoinReply);
  rpc Update (UpdateRequest) returns (UpdateReply);
}

message JoinRequest {
  string name = 1;
  optional string password = 2;
}

message JoinReply {
  bytes token = 1;
  string player_id = 2;
}

message UpdateRequest {
  bytes token = 1;
  bool up_pressed = 2;
  bool down_pressed = 3;
}

message UpdateReply {
  repeated Player players = 1;
  repeated GameObject balls = 2;
}